added the timer function

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
     <span class="high-scores">
       View High Scores:
     </span>
-    <span class="time-counter">
-      Time:
-    </span>
+    <span id="time-counter"></span>
   </header>
   
   <div class="container">
@@ -28,7 +26,8 @@
   </div>
 
   <div class="container">
-    <button>Start Quiz</button>
+    <button id="start-btn">Start Quiz</button>
   </div>
+  <script src="./assets/js/script.js"></script>
 </body>
 </html>
