added the format for first question

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   </header>
   
   <div class="container">
-    <h2>Coding Quiz Challenge</h2>
+    <h2 id="question-text">Coding Quiz Challenge</h2>
   </div>
-  <div class="container">
-    <p>
+  <div class="container" id="answer-container">
+    <p id="opening-text">
       Try to answer the folling code-related questions within the time limit.
       Keep in mind that incorrect answers will penalize your scoretime by ten seconds!
     </p>
