will provide feedback for correct or incorrect answer

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   <div class="container">
     <button id="start-btn">Start Quiz</button>
   </div>
+
+  <div class="container" id="answer-feedback-container">
+  </div>
   <script src="./assets/js/script.js"></script>
 </body>
 </html>
