highscores will now be saved to localStorage

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div>
   <div class="container" id="answer-container">
     <p id="opening-text">
-      Try to answer the folling code-related questions within the time limit.
+      Try to answer the following code-related questions within the time limit.
       Keep in mind that incorrect answers will penalize your scoretime by ten seconds!
     </p>
   </div>
