edited some of style. view scores click event

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header">
-    <span class="high-scores">
+    <span class="high-scores" id="view-high-scores">
       View High Scores:
     </span>
     <span id="time-counter"></span>
